--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="female">Female</string>
     <string name="date_of_birth">Date of birth</string>
     <string name="next">Next</string>
-    <string name="personalData">Personal data:\nName: %1$s\nEmail address:%2$s\nPhone number:%3$s\nsDate of birth:%6$d-%5$d-%4$d</string>
+    <string name="personalData">Personal data:\nName: %1$s\nEmail address:%2$s\nPhone number:%3$s\nDate of birth:%6$d-%5$d-%4$d</string>
     <string name="add_birthday">Add birthday</string>
     <string name="birthday">Birthday</string>
     <string name="separator">-</string>
@@ -21,4 +21,11 @@
     <string name="maxMonth">12</string>
     <string name="week_3">Week 3</string>
     <string name="week5">Week 5</string>
+    <string name="icon">Icon</string>
+    <string name="week2b">Week 2b</string>
+    <string name="title_activity_week1">Week 1</string>
+    <string name="week4">Week 4</string>
+    <string name="reply">output</string>
+    <string name="send_request">Send request</string>
+    <string name="age">age</string>
 </resources>
